Update html and add CSS styles

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
   <form id="item-form">
     <div id="first-row">
       <input class="input" id="question" type="text" />
+      <button class="button" id="quizlet-button">Icon</button>
+    </div>
+    <div>
       <input class="input" id="answer" type="text" />
       <button class="button" id="add-button">Add</button>
     </div>
   </form>
 
   <div id="second-row">
-    <input class="input" id="quizlet" type="text" />
     <form id="number-form">
       <input class="input" id="phone-number" type="text" />
       <button class="button" id="send-button">Send</button>
