--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <script src="script.js" defer></script>
+  <script type="module" src="script.js"></script>
   <title>Carrier Goose</title>
 </head>
 
@@ -16,20 +16,27 @@
   <form id="item-form">
     <div id="first-row">
       <input class="input" id="question" type="text" />
-      <button class="button" id="quizlet-button">Icon</button>
     </div>
-    <div>
+
+    <div id="second-row">
       <input class="input" id="answer" type="text" />
       <button class="button" id="add-button">Add</button>
     </div>
   </form>
 
-  <div id="second-row">
-    <form id="number-form">
+  <form id="quiz-form">
+    <div id="third-row">
+      <input class="input" id="quiz-input" type="text" />
+      <button class="button" id="quiz-button">Quiz</button>
+    </div>
+  </form>
+
+  <form id="number-form">
+    <div id="fourth-row">
       <input class="input" id="phone-number" type="text" />
       <button class="button" id="send-button">Send</button>
-    </form>
-  </div>
+    </div>
+  </form>
 
   <template id="list-item-template">
     <li class="list-item">
