--- a/index.html
+++ b/index.html
@@ -7,36 +7,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <title>Carrier Goose</title>
 </head>
 
 <body>
-  <ul id="list"></ul>
-
-  <form id="item-form">
-    <div id="first-row">
-      <input class="input" id="question" type="text" />
+  <div id="container">
+    <div id="list-guide">
+      <ul id="list"></ul>
     </div>
+    <form id="item-form" autocomplete="off">
+      <div id="first-row">
+        <input class="input qa" id="question" type="text" value="Question" />
+      </div>
 
-    <div id="second-row">
-      <input class="input" id="answer" type="text" />
-      <button class="button" id="add-button">Add</button>
-    </div>
-  </form>
+      <div id="second-row">
+        <input class="input qa" id="answer" type="text" value="Answer" />
+        <button class="button" id="add-button">Add</button>
+      </div>
+    </form>
 
-  <form id="quiz-form">
-    <div id="third-row">
-      <input class="input" id="quiz-input" type="text" />
-      <button class="button" id="quiz-button">Quiz</button>
-    </div>
-  </form>
+    <form id="quiz-form" autocomplete="off">
+      <div id="third-row">
+        <input class="input" id="quiz-input" type="text" value="Brainscape Link" />
+        <button class="button" id="quiz-button">Quiz</button>
+      </div>
+    </form>
 
-  <form id="number-form">
-    <div id="fourth-row">
-      <input class="input" id="phone-number" type="text" />
-      <button class="button" id="send-button">Send</button>
-    </div>
-  </form>
+    <form id="number-form" autocomplete="off">
+      <div id="fourth-row">
+        <input class="input" id="phone-number" type="text" value="Phone Number" />
+        <button class="button" id="send-button">Send</button>
+      </div>
+    </form>
+  </div>
 
   <template id="list-item-template">
     <li class="list-item">
@@ -44,10 +50,18 @@
         <span data-list-item-question></span>
         <span data-list-item-answer></span>
       </label>
-      <button data-button-delete>Delete</button>
+      <button data-button-delete>❌</button>
     </li>
   </template>
   </div>
+
+  <nav>
+    <ul class="nav-list">
+      <li class="link"><a href="#">Instructions</a></li>
+      <li>|</li>
+      <li class="link"><a href="#">Effectiveness</a></li>
+    </ul>
+  </nav>
 </body>
 
 </html>
