--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <form id="number-form" autocomplete="off">
       <div id="fourth-row">
-        <input class="input" id="phone-number" type="text" value="Phone Number" />
+        <input class="input" id="phone-number" type="tel" onInput="this.value = phoneFormat(this.value)" value="Phone Number" />
         <button class="button" id="send-button">
           <img id=send-icon src="send2.png" style="width:15px;height:15px"/>
         </button>
