--- a/index.html
+++ b/index.html
@@ -14,37 +14,39 @@
 </head>
 
 <body>
-  <div id="container">
-    <div id="list-guide">
-      <ul id="list"></ul>
+  <div id="landing-page">
+    <div id="container">
+      <div id="list-guide">
+        <ul id="list"></ul>
+      </div>
+      <form id="item-form" autocomplete="off">
+        <div id="first-row">
+          <input class="input qa" id="question" type="text" placeholder="Question" />
+          <button disabled id="invisible-button">+</button>
+        </div>
+
+        <div id="second-row">
+          <input class="input qa" id="answer" type="text" placeholder="Answer" />
+          <button class="button" id="add-button">+</button>
+        </div>
+      </form>
+
+      <form id="quiz-form" autocomplete="off">
+        <div id="third-row">
+          <input class="input" id="quiz-input" type="text" placeholder="Brainscape Link" />
+          <button class="button" id="quiz-button">+</button>
+        </div>
+      </form>
+
+      <form id="number-form" autocomplete="off">
+        <div id="fourth-row">
+          <input class="input" id="phone-number" type="text" placeholder="Phone Number" />
+          <button class="button" id="send-button">
+            <img id=send-icon src="send2.png" style="width:15px;height:15px" />
+          </button>
+        </div>
+      </form>
     </div>
-    <form id="item-form" autocomplete="off">
-      <div id="first-row">
-        <input class="input qa" id="question" type="text" placeholder="Question" />
-        <button disabled id="invisible-button">+</button>
-      </div>
-
-      <div id="second-row">
-        <input class="input qa" id="answer" type="text" placeholder="Answer" />
-        <button class="button" id="add-button">+</button>
-      </div>
-    </form>
-
-    <form id="quiz-form" autocomplete="off">
-      <div id="third-row">
-        <input class="input" id="quiz-input" type="text" placeholder="Brainscape Link" />
-        <button class="button" id="quiz-button">+</button>
-      </div>
-    </form>
-
-    <form id="number-form" autocomplete="off">
-      <div id="fourth-row">
-        <input class="input" id="phone-number" type="text" placeholder="Phone Number" />
-        <button class="button" id="send-button">
-          <img id=send-icon src="send2.png" style="width:15px;height:15px" />
-        </button>
-      </div>
-    </form>
   </div>
 
   <template id="list-item-template">
@@ -60,8 +62,8 @@
 
   <nav>
     <ul class="nav-list">
-      <li class="link"><a href="#">Instructions</a></li>
-      <li class="link"><a href="#">Effectiveness</a></li>
+      <li class="link"><a href="#">How it works</a></li>
+      <li class="link"><a href="#">Why it works</a></li>
     </ul>
   </nav>
 </body>
